# data-pipeline-assessment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/pipeline/: exceptions.py  extractor.py  instrument_parser.py  instrument_transformer.py  pipeline.py  registry.py
src/pipeline/clients/: downloader.py
src/pipeline/models/: file_record.py  instrument.py
src/pipeline/storage/: base_storage.py  fsspec_storage.py
tests/fixtures/: registry_response.xml
tests/integration/: integration_test.py  integration_test_real.py
tests/unit/: test_downloader.py  test_extractor.py  test_instrument_transformer.py  test_intrument_parser.py  test_registry.py  test_storage.py
