[project]
name = "steeleye"
version = "0.1.0"
description = "SteelEye technical assessment"
authors = [
    {name = "joaompsilva99",email = "joaompsilva99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "fsspec (>=2026.6.0,<2027.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "responses (>=0.26.1,<0.27.0)",
]

[tool.poetry]
packages = [{include = "pipeline", from = "src"}]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true